# libobd2

./: CMakeLists.txt  LICENSE  README.md  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
obd2/: CMakeLists.txt
obd2/include/obd2/: connection_handler.hpp  serial_interface.hpp  serial_interface.inl
obd2/src/obd2/: connection_handler.cpp  serial_interface.cpp
obd2/test/obd2/: connection_handler.test.cpp  serial_interface.test.cpp
